2001-09-30  Cristy  <cristy@mystic.es.dupont.com>
	* switched strcpy to strncpy to help protect against buffer
	  overflow.
	* ltdl.c passed int reference but a long was needed;
	  caused a fault on Solaris 64-bit compiles.

2001-09-25  Cristy  <cristy@mystic.es.dupont.com>
	* Removed most lint complaints from the source.
	* strtod() returns different results on Linux and Solaris for 0x13.
	* Added a MATLAB encoder contributed by Jaroslav Fojtik.

2001-09-21  Cristy  <cristy@mystic.es.dupont.com>
	* Replaced TemporaryFilename() with UniqueImageFilename().
	* ImageMagick CORE API is now 64-bit clean.

2001-09-20  Cristy  <cristy@mystic.es.dupont.com>
	* Fixed svg.c to accept a viewbox with a negative offset.

2001-09-15  Cristy  <cristy@mystic.es.dupont.com>
	* Surveying the code for 64-bit compatibility.
	* The cloned colormap was too small (reported by Glenn).
	* A blob was being unmapped more than once for multi-frame images.

2001-09-12  Cristy  <cristy@mystic.es.dupont.com>
	* Text drawing now handles UTF8-encoding.
	* Off-by-one GetImagePixels() fix in draw.c
	* PingImage() now reports attributes for all images in
	  an image sequence.

2001-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/image.h: Rename QuantumLeap define to QuantumDepth.
	  QuantumDepth is set to the values 8 or 16, depending on user
	  configuration option.

2001-09-09  Cristy  <cristy@mystic.es.dupont.com>
	* Updated PerlMagick signatures to reflect new digital
	  signature algorithm.

2001-09-08  Cristy  <cristy@mystic.es.dupont.com>
	* ImageMagick defaults to 16-bit quantum.  Set QuantumMagick for
	  8-bit.
	* Changed image->blob from BlobInfo to BlobInfo* so the Image
	  structure size is not dependent on the large-file preprocessor
	  defines.

2001-09-07  Cristy  <cristy@mystic.es.dupont.com>
	* Added -background to convert program usage text.
	* DispatchImage() now properly handles grayscale images.

2001-09-01  Glenn  <glennrp@home.kom>